force-app/main/default/objects/Competitive_Threat__c/Competitive_Threat__c.object-meta.xml
<CustomObject>
    <label>Competitive Intelligence</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Competitive Intelligence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>