force-app/main/default/objects/Competitive_Threat__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <inlineHelpText>Select the account this competitive information is for.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitive Intelligence (Account)</relationshipLabel>
    <relationshipName>Competitive_Threat</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>