force-app/main/default/objects/Competitive_Threat__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any additional comments about the competitor/competitor situation.</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>