force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account_Id__c</fullName>
    <formula>Competitor_Company_Name__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>xCompetitor Account Id</label>
    <type>Text</type>
</CustomField>