force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>xCompetitor Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Competitive_Threats_At_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>