force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If you don&apos;t find the competitor you are looking for, send an email to competitor.list@omnitracs.com to have it added.</inlineHelpText>
    <label>Competitor Name</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Competitive Intelligence</relationshipLabel>
    <relationshipName>Competitive_Threats</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>