force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Status__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Status__c</fullName>
    <label>Competitor Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Account – Competitor Soliciting</fullName>
                <label>Existing Account - Competitor Soliciting</label>
            </value>
            <value>
                <fullName>Existing Account - Talking to Competitor</fullName>
            </value>
            <value>
                <fullName>Existing Account - Meeting with Competitor</fullName>
            </value>
            <value>
                <fullName>Existing Account - Evaluating Competitor</fullName>
            </value>
            <value>
                <fullName>Existing Account - Reviewing Contracts</fullName>
            </value>
            <value>
                <fullName>Existing Account - Lost Business to Competitor</fullName>
            </value>
            <value>
                <fullName>Existing Account - Competitor Eliminated from Consideration</fullName>
            </value>
            <value>
                <fullName>Prospect - Talking to Prospect</fullName>
            </value>
            <value>
                <fullName>Prospect - Meeting with Prospect</fullName>
            </value>
            <value>
                <fullName>Prospect - Evaluating with Omnitracs</fullName>
            </value>
            <value>
                <fullName>Prospect - Contract Review</fullName>
            </value>
            <value>
                <fullName>Prospect - Lost Opportunity - Stayed with Competitor</fullName>
            </value>
            <value>
                <fullName>Prospect - Won Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
                <isActive>false</isActive>
                <label>Callback</label>
            </value>
            <value>
                <fullName>Contract out for signature</fullName>
                <isActive>false</isActive>
                <label>Contract out for signature</label>
            </value>
            <value>
                <fullName>Email update</fullName>
                <isActive>false</isActive>
                <label>Email update</label>
            </value>
            <value>
                <fullName>Evaluation</fullName>
                <isActive>false</isActive>
                <label>Evaluation</label>
            </value>
            <value>
                <fullName>Happy with Competition</fullName>
                <isActive>false</isActive>
                <label>Happy with Competition</label>
            </value>
            <value>
                <fullName>Long term contract with competitor</fullName>
                <isActive>false</isActive>
                <label>Long term contract with competitor</label>
            </value>
            <value>
                <fullName>Looking at Functionality</fullName>
                <isActive>false</isActive>
                <label>Looking at Functionality</label>
            </value>
            <value>
                <fullName>On--site Meeting</fullName>
                <isActive>false</isActive>
                <label>On--site Meeting</label>
            </value>
            <value>
                <fullName>Price negotiations</fullName>
                <isActive>false</isActive>
                <label>Price negotiations</label>
            </value>
            <value>
                <fullName>Solution offered</fullName>
                <isActive>false</isActive>
                <label>Solution offered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>