force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Strengths__c</fullName>
    <inlineHelpText>What are the competitor strengths as they relate to this account?</inlineHelpText>
    <label>Competitor Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>