force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Units_Installed__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Units_Installed__c</fullName>
    <label># Competitor Units Installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>