force-app/main/default/objects/Competitive_Threat__c/fields/Competitor_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Weaknesses__c</fullName>
    <inlineHelpText>What are the competitor weaknesses as they relate to this account?</inlineHelpText>
    <label>Competitor Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>