force-app/main/default/objects/Competitive_Threat__c/fields/Entire_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Entire_Fleet__c</fullName>
    <inlineHelpText>Is the entire fleet at risk?</inlineHelpText>
    <label>Entire Fleet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>