force-app/main/default/objects/Competitive_Threat__c/fields/Expected_Competitor_Contract_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Expected_Competitor_Contract_Expiration__c</fullName>
    <inlineHelpText>What is the expiration date of the current competitor&apos;s contract (if known)?</inlineHelpText>
    <label>Expected Competitor Contract Expiration</label>
    <type>Date</type>
</CustomField>