force-app/main/default/objects/Competitive_Threat__c/fields/Has_Product_Solution_Today__c.field-meta.xml
<CustomField>
    <fullName>Has_Product_Solution_Today__c</fullName>
    <inlineHelpText>Does the account have a competitor product/solution today?</inlineHelpText>
    <label>Has Competitor Product/Solution Today?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>