force-app/main/default/objects/Competitive_Threat__c/fields/of_Units_At_Risk__c.field-meta.xml
<CustomField>
    <fullName>of_Units_At_Risk__c</fullName>
    <label># of Units At Risk</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>