force-app/main/default/objects/Competitive_Threat__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity Name</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitive Intelligence</relationshipLabel>
    <relationshipName>Competitive_Intelligence</relationshipName>
    <type>Lookup</type>
</CustomField>