force-app/main/default/objects/Competitive_Threat__c/fields/Product_Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_Name__c</fullName>
    <inlineHelpText>Enter the name of the competitor&apos;s Product.</inlineHelpText>
    <label>Competitor Product/Solution Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>