force-app/main/default/objects/Competitive_Threat__c/fields/Product_Solution_Offered__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_Offered__c</fullName>
    <inlineHelpText>For existing customers, select the products at risk or product being sold. For prospects, select the products being proposed. If a solution is missing from the list, please email sfdc.support@omnitracs.com.</inlineHelpText>
    <label>Omnitracs Product/Solution Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-cab Scanning</fullName>
            </value>
            <value>
                <fullName>MCP100</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>RNA</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>CEV</fullName>
            </value>
            <value>
                <fullName>Per Diem</fullName>
            </value>
            <value>
                <fullName>Weigh Station Bypass</fullName>
            </value>
            <value>
                <fullName>Workflow/Trip Management</fullName>
            </value>
            <value>
                <fullName>IFTA</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>Imp_Services_Safety_Model_Workers_Comp</fullName>
                <label>Implementation Svs: Safety Model Wk Comp</label>
            </value>
            <value>
                <fullName>In-cab Navigation</fullName>
            </value>
            <value>
                <fullName>In-cab Training</fullName>
            </value>
            <value>
                <fullName>Kit T2 para Caja Seca</fullName>
            </value>
            <value>
                <fullName>Kit T2 para Plataforma</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Básico Nuevo</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Básico Remanufacturado</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Logístico Nuevo</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Logístico Remanufacturado</fullName>
            </value>
            <value>
                <fullName>Performance Monitoring with Fuel Manager</fullName>
            </value>
            <value>
                <fullName>Sylectus Alliance Connect</fullName>
            </value>
            <value>
                <fullName>Sylectus Alliance Pro</fullName>
            </value>
            <value>
                <fullName>Sylectus Alliance Virtual Fleet</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>