force-app/main/default/objects/Competitive_Threat__c/fields/QES_Product_Solution_Offered__c.field-meta.xml
<CustomField>
    <fullName>QES_Product_Solution_Offered__c</fullName>
    <inlineHelpText>What product/solution is being offered?</inlineHelpText>
    <label>Product/Solution Offered</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AEF</fullName>
            </value>
            <value>
                <fullName>AEF Armor</fullName>
            </value>
            <value>
                <fullName>Analytics Manager</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Content Development:  External</fullName>
            </value>
            <value>
                <fullName>Content Development:  Internal</fullName>
            </value>
            <value>
                <fullName>CSA Safety Performance Service</fullName>
            </value>
            <value>
                <fullName>Driver Recruiting Model</fullName>
            </value>
            <value>
                <fullName>Driver Retention Model</fullName>
            </value>
            <value>
                <fullName>Driving Center Platform</fullName>
            </value>
            <value>
                <fullName>Fatigue Risk Model</fullName>
            </value>
            <value>
                <fullName>FS Connect</fullName>
            </value>
            <value>
                <fullName>FS Cost Control</fullName>
            </value>
            <value>
                <fullName>FS Elite</fullName>
            </value>
            <value>
                <fullName>FS Security</fullName>
            </value>
            <value>
                <fullName>Hours of Service</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Driver Recruiting</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Driver Retention</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Fatigue Model</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Safety Model Driving</fullName>
            </value>
            <value>
                <fullName>Implementation Services:  Safety Model Workers Comp</fullName>
            </value>
            <value>
                <fullName>In-cab Navigation</fullName>
            </value>
            <value>
                <fullName>In-cab Scanning</fullName>
            </value>
            <value>
                <fullName>In-cab Training</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>Kit T2 para Caja Seca</fullName>
            </value>
            <value>
                <fullName>Kit T2 para Plataforma</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Básico Nuevo</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Básico Remanufacturado</fullName>
            </value>
            <value>
                <fullName>Kit TMCI Logístico Nuevo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>