force-app/main/default/objects/Competitive_Threat__c/fields/Satisfaction_Level__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Level__c</fullName>
    <inlineHelpText>What is the prospect&apos;s current level of satisfaction with the competitor?</inlineHelpText>
    <label>Satisfaction Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Satisfied</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very Dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>