force-app/main/default/objects/Competitive_Threat__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <label>Update Date</label>
    <type>Date</type>
</CustomField>