force-app/main/default/objects/Competitive_Threat__c/recordTypes/CNR.recordType-meta.xml
<RecordType>
    <fullName>CNR</fullName>
    <active>true</active>
    <description>Used for CNR Competitors</description>
    <label>CNR</label>
</RecordType>