force-app/main/default/objects/Competitive_Threat__c/recordTypes/FRA.recordType-meta.xml
<RecordType>
    <fullName>FRA</fullName>
    <active>true</active>
    <description>Used for FRA Competitors</description>
    <label>FRA</label>
</RecordType>