force-app/main/default/objects/Competitive_Threat__c/recordTypes/QES.recordType-meta.xml
<RecordType>
    <fullName>QES</fullName>
    <active>true</active>
    <description>Used for Omnitracs Competitors</description>
    <label>Omnitracs</label>
</RecordType>