force-app/main/default/objects/Competitive_Threat__c/recordTypes/Sylectus.recordType-meta.xml
<RecordType>
    <fullName>Sylectus</fullName>
    <active>true</active>
    <description>Used for Sylectus Competitors</description>
    <label>Sylectus</label>
</RecordType>