force-app/main/default/objects/Competitive_Threat__c/validationRules/No_of_Units_At_Risk_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>No_of_Units_At_Risk_Required</fullName>
    <active>true</active>
    <description>Make # of Units At Risk required if Entire Fleet is no</description>
    <errorConditionFormula>AND (
ISPICKVAL( Entire_Fleet__c  ,&quot;No&quot;),
 ISBLANK( of_Units_At_Risk__c)
)</errorConditionFormula>
    <errorDisplayField>of_Units_At_Risk__c</errorDisplayField>
    <errorMessage># of Units At Risk is required if Entire Fleet is No.</errorMessage>
</ValidationRule>