force-app/main/default/objects/Competitive_Threat__c/validationRules/Product_Solution_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Solution_Name_Required</fullName>
    <active>true</active>
    <description>Make Product/Solution Name required if Has Product/Solution is yes</description>
    <errorConditionFormula>AND ( 
ISPICKVAL(Has_Product_Solution_Today__c ,&quot;Yes&quot;), 
Product_Solution_Name__c =&quot;&quot; 
)</errorConditionFormula>
    <errorDisplayField>Product_Solution_Name__c</errorDisplayField>
    <errorMessage>Product/Solution Name is required if Has Product/Solution is Yes.</errorMessage>
</ValidationRule>