force-app/main/default/objects/Competitive_Threat__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Competitor_Name__c</columns>
    <columns>Product_Solution_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>